RESOLVED FIXED208611
Some media tests crash when run in the GPU process
https://bugs.webkit.org/show_bug.cgi?id=208611
Summary Some media tests crash when run in the GPU process
Eric Carlson
Reported 2020-03-04 15:42:40 PST
Some media tests crash when run in the GPU process
Attachments
Patch (6.92 KB, patch)
2020-03-04 15:58 PST, Eric Carlson
no flags
Patch (6.95 KB, patch)
2020-03-04 16:56 PST, Eric Carlson
no flags
Radar WebKit Bug Importer
Comment 1 2020-03-04 15:42:52 PST
Eric Carlson
Comment 2 2020-03-04 15:58:09 PST
Eric Carlson
Comment 3 2020-03-04 16:56:18 PST
Jer Noble
Comment 4 2020-03-05 09:27:18 PST
Comment on attachment 392512 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=392512&action=review > Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:2291 > + bool satisfied = [m_videoOutputDelegate semaphore].waitFor(1_s); nit: This could also be written as `m_videoOutputDelegate.get().semaphore.waitFor(1_s);` but I don't know what the current policy for this kind of thing is.
WebKit Commit Bot
Comment 5 2020-03-05 10:27:08 PST
Comment on attachment 392512 [details] Patch Clearing flags on attachment: 392512 Committed r257926: <https://trac.webkit.org/changeset/257926>
WebKit Commit Bot
Comment 6 2020-03-05 10:27:09 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.